      baseline and plotmath places them on the baseline).  (Related to
      \PR{14537}.)

      \item \code{sunflowerplot()} now has a formula interface.
      (Wish of \PR{14541}.)

      \item New wrapper function \code{showNonASCIIfile()} in package
      \pkg{tools}.

      \item \code{iconv} no longer translates \code{NA} strings as
      \code{"NA"}.  It has a new argment \code{toRaw} to handle (as
      before the \code{CHARSXP} cache) encodings such as \code{UTF-16}
      with embedded nuls.

      It will also accept as input the type of list generated with
      \code{toRaw = TRUE}.

      \item Garbage-collecting an input text connection no longer gives
      a warning (it \sQuote{connects} to nothing outside \R).
    }
  }

  \subsection{SWEAVE & VIGNETTES}{
    \itemize{
      \item Option \code{keep.source = TRUE} is now the default.
      
      \item User-defined numeric (with names starting \code{n_}) and
      character (starting \code{ch_}) options are now allowed in
      \code{Sweave()}: as before all other unknown options are taken to
      be logical.

      \item \code{Sweave()} and \code{Stangle()} gain an \code{encoding}
      argument to specify the encoding of the vignette sources if the
      latter do not contain a \samp{\\usepackage[]{inputenc}} statement
      specifying a single input encoding.

      \item Package installation tangles the vignette sources: this step
      now converts the vignette sources from the vignette/package
      encoding to the current encoding, and records the encoding (if not
      ASCII) in a comment line at the top of the installed \file{.R}
      file.

      \item The preferred location for vignette sources is now the
      directory \file{vignettes} and not \file{inst/doc}: \command{R CMD
	build} will now re-build vignettes in \file{vignettes} and copy
      the \file{.Rnw} (etc) files and the corresponding PDFs to
      \file{inst/doc}.
